<resources>
    <string name="app_name">CalCalories</string>
    <string name="menu_home">Home</string>
    <string name="menu_notes">Daily Notes</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_workout">Work-Out</string>
    <string name="menu_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_plan">Your Plan</string>
    <string name="caption">Welcome! what are you gonna do?</string>
    <string name="registrasi">Registrasi</string>
    <string name="tanggal_lahir">Tanggal Lahir:</string>
    <string name="nama">Nama :</string>
    <string name="calcalories">CalCalories</string>
    <string name="descriprion">Let\'s Go Workout!</string>
</resources>
