<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/menu_notes"
        android:icon="@drawable/ic_event_note_black_24dp"
        android:title="@string/menu_notes" />
    <item
        android:id="@+id/menu_recipes"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/menu_recipes" />
    <item
        android:id="@+id/menu_workout"
        android:icon="@drawable/ic_fitness_center_black_24dp"
        android:title="@string/menu_workout" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_applications_black_24dp"
        android:title="@string/menu_settings" />
</menu>